turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:10: error: 'case' expected but identifier found.
		Color.black => brosse(Color.white)
                ^LangtonsAnt:11: error: '}' expected but ';' found.
; droite(); avance()
^LangtonsAnt:12: error: not a legal formal parameter
		Color.white => brosse(Color.black); gauche(); avance()
                      ^LangtonsAnt:18: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:25: error: eof expected but '}' found.
}
^