turmites.lessons.turmites.langton.Langton.scala.code
def brosse(couleur:Color)
{
	setCouleurBrosse(couleur); poseBrosse(); leveBrosse()
}

def step() 
{
	getCouleurSol() match
	{
		Color.black => brosse(Color.white)
; droite(); avance()
		Color.white => brosse(Color.black); gauche(); avance()
	}
}
